%%{init: {'theme':'base','themeVariables':{'fontFamily':'Arial','primaryColor':'#F7F3F2','primaryTextColor':'#171717','primaryBorderColor':'#B4232F','lineColor':'#5B6068','secondaryColor':'#F3F4F6','tertiaryColor':'#FFFFFF','clusterBkg':'#FFFFFF','clusterBorder':'#D1D5DB','actorBkg':'#FFFFFF','actorBorder':'#B4232F','actorTextColor':'#171717','signalColor':'#404040','signalTextColor':'#171717','noteBkgColor':'#FFF7ED','noteBorderColor':'#C2410C','noteTextColor':'#171717'}}}%%
classDiagram
    class AISystem {+UUID id;+string lifecycle_status;+string autonomy_level;+json risk_context}
    class AISystemVersion {+int version_number;+string definition_hash;+string model}
    class AIDataUseRevision {+string use_kind;+list fields;+string schema_fingerprint;+string evidence_class}
    class AIReleaseManifest {+string manifest_hash;+datetime evidence_cutoff}
    class AIDeployment {+string environment;+string status;+int activation_generation}
    class AIApproval {+string reviewer_role;+string decision;+string evidence_snapshot_hash}
    class AIEvidence {+string evidence_type;+string content_hash;+string redaction_class}
    class AIControlEvaluation {+string control_id;+string status;+string reason_code;+string input_hash}
    class AIGovernanceIncident {+string control_id;+string severity;+string status;+string dedupe_key}
    AISystem "1" *-- "1..*" AISystemVersion
    AISystemVersion "1" *-- "0..*" AIDataUseRevision
    AISystemVersion "1" *-- "0..*" AIReleaseManifest
    AISystem "1" *-- "0..*" AIDeployment
    AIReleaseManifest "1" -- "0..*" AIApproval
    AIDeployment "1" *-- "0..*" AIEvidence
    AIEvidence "0..1" -- "0..*" AIControlEvaluation
    AIControlEvaluation "1" -- "0..1" AIGovernanceIncident
